tools/crates/vendor/toml_edit/tests/fixtures/invalid/bool/just-f.stderr
TOML parse error at line 1, column 27
  |
1 | just-f                  = f
  |                           ^
invalid string
expected `"`, `'`
